Update, fix default detection

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "qtchooser-39-g4717841.tar.xz": dd84939f089441ced26306518974b645cf0887b7
+  qtchooser-66.tar.xz: 0d453875fc130519ce7ecb4bf0c19d69d3fa8f19
